--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     
     <!-- Header -->
-    <header class="bg-gray-900 shadow-md fixed w-full z-10 top-0">
+    <!-- <header class="bg-gray-900 shadow-md fixed w-full z-10 top-0">
         <div class="container mx-auto flex justify-between items-center py-4 px-6">
             <h1 class="text-xl font-bold text-white">Успешный Инвестор</h1>
             <nav>
@@ -59,7 +59,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
 
     <!-- Hero Section -->
     <section class="relative h-screen flex items-center justify-center text-center bg-cover bg-center" style="background-image: url('https://source.unsplash.com/1600x900/?finance,investment');">
