Added graphs and crypto images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2"></script>
     <style>
+        /* Базовые стили, сохранены из предыдущей версии */
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #121212;
@@ -17,6 +18,7 @@
             /* Отступ для контента после фиксированного хедера */
         }
 
+        /* Анимация появления (fade-in), используется в других секциях */
         .fade-in {
             opacity: 0;
             transform: translateY(20px);
@@ -28,6 +30,93 @@
             transform: translateY(0);
         }
 
+        /* Структура Hero-секции */
+        .hero {
+            position: relative;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            background-color: black;
+            /* Фон для плавного затемнения */
+            overflow: hidden;
+        }
+
+        /* Затемняющий слой для читаемости текста */
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            /* Затемнение */
+            z-index: 1;
+        }
+
+        /* Контейнер текста поверх графика */
+        .hero-content {
+            position: relative;
+            z-index: 2;
+            /* Поверх графика */
+            color: white;
+            max-width: 700px;
+            padding: 20px;
+        }
+
+        .hero-content h1 {
+            font-size: 3rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .hero-content p {
+            font-size: 1.5rem;
+            margin-bottom: 20px;
+        }
+
+        /* CTA-кнопка */
+        .hero-content a {
+            display: inline-block;
+            background-color: #FFD700;
+            color: black;
+            padding: 12px 24px;
+            font-size: 1.2rem;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background-color 0.3s ease-in-out;
+            /* Указываем конкретное свойство */
+        }
+
+        .hero-content a:hover {
+            background-color: #FFC107;
+        }
+
+        .hero-content a:hover {
+            background-color: #FFC107;
+        }
+
+        /* График TradingView */
+        .tradingview-widget-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+            /* Под текстом */
+        }
+
+        .tradingview-widget-container iframe {
+            width: 100%;
+            height: 100%;
+            opacity: 0.9;
+            /* Прозрачность графика */
+        }
+
+        /* Слайдер отзывов (сохранён без изменений) */
         .testimonial-container {
             width: 100%;
             overflow: hidden;
@@ -61,7 +150,6 @@
             <nav>
                 <ul class="flex space-x-4">
                     <li><a href="#about" class="text-gray-300 hover:text-yellow-400">Обо мне</a></li>
-                    <li><a href="#strategies" class="text-gray-300 hover:text-yellow-400">Стратегии</a></li>
                     <li><a href="#cases" class="text-gray-300 hover:text-yellow-400">Кейс-стадии</a></li>
                     <li><a href="#testimonials" class="text-gray-300 hover:text-yellow-400">Отзывы</a></li>
                     <li><a href="#contact" class="text-gray-300 hover:text-yellow-400">Контакты</a></li>
@@ -71,15 +159,23 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="relative h-screen flex items-center justify-center text-center bg-cover bg-center"
-        style="background-image: url('https://source.unsplash.com/1600x900/?finance,investment');">
+    <section class="relative h-screen flex items-center justify-center text-center bg-cover bg-center hero">
+        <!-- Контейнер для графика -->
+        <div class="tradingview-widget-container">
+            <div id="tradingview_chart"></div>
+        </div>
+
+        <!-- Затемняющий слой для читаемости текста -->
         <div class="absolute inset-0 bg-black bg-opacity-60"></div>
-        <div class="relative z-10 max-w-3xl mx-auto text-white px-6">
+
+        <!-- Контент поверх графика -->
+        <div class="relative z-10 max-w-3xl mx-auto text-white px-6 fade-in">
             <h2 class="text-4xl md:text-5xl font-bold mb-4">Ваш путь в криптовалюте начинается здесь!</h2>
             <p class="text-lg md:text-xl mb-6">Я помог десяткам трейдеров приумножить капитал — узнайте, как.</p>
             <a href="#contact"
-                class="bg-yellow-400 text-gray-900 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-yellow-300 transition">Начните
-                зарабатывать на крипторынке уже сегодня</a>
+                class="bg-yellow-400 text-gray-900 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-yellow-300 transition">
+                Начните зарабатывать на крипторынке уже сегодня
+            </a>
         </div>
     </section>
 
@@ -96,7 +192,7 @@
             </ul>
         </div>
         <div class="md:w-1/2 flex justify-center mt-6 md:mt-0">
-            <img src="IMG_3229-topaz.jpeg" alt="Инвестор" class="rounded-lg shadow-lg w-80 h-80 object-cover">
+            <img src="result1-topaz.jpg" alt="Инвестор" class="rounded-lg shadow-lg w-80 h-80 object-cover">
         </div>
     </section>
 
@@ -108,19 +204,19 @@
                 <h3 class="text-xl font-bold mb-2">Торговля на фьючерсных рынках</h3>
                 <p class="text-gray-400">Как я использовал риск-менеджмент и технический анализ, чтобы увеличить депозит
                     в 4 раза за 6 месяцев, торгуя с кредитным плечом.</p>
-                <img src="startap.jpeg" alt="Кейс 1" class="rounded-lg mt-4">
+                <img src="case1.jpeg" alt="Кейс 1" class="rounded-lg mt-4">
             </div>
             <div class="bg-gray-800 p-6 rounded-lg shadow-md">
                 <h3 class="text-xl font-bold mb-2">Межбиржевая торговля</h3>
                 <p class="text-gray-400">Пример арбитражной стратегии, которая позволила заработать на разнице цен между
                     биржами, обеспечив стабильную прибыль без высокого риска.</p>
-                <img src="estate.jpeg" alt="Кейс 2" class="rounded-lg mt-4">
+                <img src="case2.jpeg" alt="Кейс 2" class="rounded-lg mt-4">
             </div>
             <div class="bg-gray-800 p-6 rounded-lg shadow-md">
                 <h3 class="text-xl font-bold mb-2">Торговля на спотовых рынках</h3>
                 <p class="text-gray-400">Как был определён момент входа в перспективные активы, что привело к росту
                     портфеля на 300% в течение года.</p>
-                <img src="crypto.jpeg" alt="Кейс 3" class="rounded-lg mt-4">
+                <img src="case3.jpeg" alt="Кейс 3" class="rounded-lg mt-4">
             </div>
         </div>
     </section>
@@ -229,7 +325,7 @@
 
 
         <!-- CTA -->
-        <section id="cta" class="container mx-auto py-20 text-center fade-in">
+        <section id="contact" class="container mx-auto py-20 text-center fade-in">
             <h2 class="text-3xl font-bold mb-4">Начните свой путь в инвестициях</h2>
             <p class="text-lg text-gray-300 mb-6">Получите бесплатную консультацию по инвестициям – оставьте свои
                 контакты</p>
@@ -254,10 +350,16 @@
                             required>
                     </div>
                     <button type="submit"
-                        class="w-full bg-yellow-400 text-gray-900 px-4 py-2 rounded-lg font-semibold hover:bg-yellow-300 transition">Записаться</button>
+                        class="w-full bg-yellow-400 text-gray-900 px-4 py-2 rounded-lg font-semibold hover:bg-yellow-300 transition">
+                        Записаться
+                    </button>
                 </form>
-                <p class="text-sm text-gray-400 mt-4">Или подпишитесь на наш <a href="#"
-                        class="text-yellow-400 hover:underline">Telegram-канал</a></p>
+                <p class="text-sm text-gray-400 mt-4">Или подпишитесь на наш
+                    <a href="https://t.me/invest_s_tr" target="_blank" rel="noopener noreferrer"
+                        class="text-yellow-400 hover:underline">
+                        Telegram-канал
+                    </a>
+                </p>
             </div>
         </section>
 
@@ -267,21 +369,17 @@
                 <p class="text-lg font-semibold">Контакты</p>
                 <p>Email: <a href="mailto:info@investor.com"
                         class="text-yellow-400 hover:underline">info@investor.com</a></p>
-                <p>Телефон: <a href="tel:+1234567890" class="text-yellow-400 hover:underline">+1 (234) 567-890</a></p>
-                <div class="flex justify-center space-x-4 mt-4">
-                    <a href="#" class="text-yellow-400 hover:underline">Telegram</a>
-                    <a href="#" class="text-yellow-400 hover:underline">LinkedIn</a>
-                    <a href="#" class="text-yellow-400 hover:underline">Facebook</a>
-                </div>
-                <p class="mt-4 text-sm">© 2024 Успешный Инвестор. Все права защищены.</p>
+                <p class="mt-4 text-sm">© 2025 Виктор Корнев. Все права защищены.</p>
                 <p class="text-xs"><a href="#" class="text-yellow-400 hover:underline">Политика конфиденциальности</a> |
                     <a href="#" class="text-yellow-400 hover:underline">Юридическая информация</a>
                 </p>
             </div>
         </footer>
 
+        <script src="https://s3.tradingview.com/tv.js"></script> <!-- Подключение TradingView API -->
         <script>
             document.addEventListener("DOMContentLoaded", () => {
+                // Анимация появления элементов при скролле
                 const fadeElements = document.querySelectorAll(".fade-in");
                 const observer = new IntersectionObserver((entries) => {
                     entries.forEach(entry => {
@@ -290,26 +388,51 @@
                         }
                     });
                 }, { threshold: 0.1 });
-                fadeElements.forEach(el => observer.observe(el));
-            });
-            let index = 0;
-            function updateSlider() {
-                const slides = document.querySelectorAll(".testimonial-slide");
-                slides.forEach((slide, i) => {
-                    slide.classList.toggle("active", i === index);
-                });
-            }
-            function nextTestimonial() {
-                const slides = document.querySelectorAll(".testimonial-slide");
-                index = (index + 1) % slides.length;
-                updateSlider();
-            }
-            function prevTestimonial() {
-                const slides = document.querySelectorAll(".testimonial-slide");
-                index = (index - 1 + slides.length) % slides.length;
-                updateSlider();
-            }
 
+                fadeElements.forEach(el => observer.observe(el));
+
+                // Инициализация TradingView графика
+                new TradingView.widget({
+                    "container_id": "tradingview_chart",
+                    "width": "100%",
+                    "height": "100%",
+                    "symbol": "BINANCE:BTCUSDT", // Торговая пара BTC/USDT
+                    "interval": "30", // Интервал свечей (30 минут)
+                    "timezone": "Etc/UTC",
+                    "theme": "dark",
+                    "style": "1", // Свечной график
+                    "locale": "ru",
+                    "toolbar_bg": "#f1f3f6",
+                    "enable_publishing": false,
+                    "hide_side_toolbar": true,
+                    "hide_top_toolbar": true,
+                    "allow_symbol_change": false,
+                    "backgroundColor": "transparent",
+                    "studies": ["RSI@tv-basicstudies"], // Добавляем индикатор RSI
+                    "autosize": true
+                });
+
+                // Слайдер отзывов (оставил без изменений)
+                let index = 0;
+                function updateSlider() {
+                    const slides = document.querySelectorAll(".testimonial-slide");
+                    slides.forEach((slide, i) => {
+                        slide.classList.toggle("active", i === index);
+                    });
+                }
+
+                function nextTestimonial() {
+                    const slides = document.querySelectorAll(".testimonial-slide");
+                    index = (index + 1) % slides.length;
+                    updateSlider();
+                }
+
+                function prevTestimonial() {
+                    const slides = document.querySelectorAll(".testimonial-slide");
+                    index = (index - 1 + slides.length) % slides.length;
+                    updateSlider();
+                }
+            });
         </script>
 
     </section>
