--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 стратегий, которые приносят стабильную прибыль.</p>
             <ul class="list-disc pl-5 text-lg">
                 <li>Средний ROI – 35% в месяц</li>
-                <li>Более 500 прибыльных сделок</li>
+                <li>Торговля по алгоритму: 500+ прибыльных решений без эмоций</li>
                 <li>Консультировал 100+ трейдеров и инвесторов</li>
             </ul>
         </div>
