--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Одностраничный сайт-визитка">
-    <title>Визитка</title>
+    <meta name="description" content="Виктор Корнев Трейдер">
+    <title>Виктор Корнев Трейдер</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2"></script>
     <style>
@@ -146,7 +146,7 @@
     <!-- Header -->
     <header class="bg-gray-900 shadow-md fixed w-full z-10 top-0">
         <div class="container mx-auto flex justify-between items-center py-4 px-6">
-            <h1 class="text-xl font-bold text-white">Успешный Инвестор</h1>
+            <h1 class="text-xl font-bold text-white">Виктор Корнев</h1>
             <nav>
                 <ul class="flex space-x-4">
                     <li><a href="#about" class="text-gray-300 hover:text-yellow-400">Обо мне</a></li>
@@ -174,7 +174,7 @@
             <p class="text-lg md:text-xl mb-6">Я помог десяткам трейдеров приумножить капитал — узнайте, как.</p>
             <a href="#contact"
                 class="bg-yellow-400 text-gray-900 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-yellow-300 transition">
-                Начните зарабатывать на крипторынке уже сегодня
+                Начать торговать
             </a>
         </div>
     </section>
@@ -379,6 +379,9 @@
         <script src="https://s3.tradingview.com/tv.js"></script> <!-- Подключение TradingView API -->
         <script>
             document.addEventListener("DOMContentLoaded", () => {
+                // Показываем сайт сразу, не ждем график
+                document.querySelector(".hero").style.visibility = "visible";
+
                 // Анимация появления элементов при скролле
                 const fadeElements = document.querySelectorAll(".fade-in");
                 const observer = new IntersectionObserver((entries) => {
@@ -391,26 +394,28 @@
 
                 fadeElements.forEach(el => observer.observe(el));
 
-                // Инициализация TradingView графика
-                new TradingView.widget({
-                    "container_id": "tradingview_chart",
-                    "width": "100%",
-                    "height": "100%",
-                    "symbol": "BINANCE:BTCUSDT", // Торговая пара BTC/USDT
-                    "interval": "30", // Интервал свечей (30 минут)
-                    "timezone": "Etc/UTC",
-                    "theme": "dark",
-                    "style": "1", // Свечной график
-                    "locale": "ru",
-                    "toolbar_bg": "#f1f3f6",
-                    "enable_publishing": false,
-                    "hide_side_toolbar": true,
-                    "hide_top_toolbar": true,
-                    "allow_symbol_change": false,
-                    "backgroundColor": "transparent",
-                    "studies": ["RSI@tv-basicstudies"], // Добавляем индикатор RSI
-                    "autosize": true
-                });
+                // Загружаем график без блокировки страницы
+                setTimeout(() => {
+                    new TradingView.widget({
+                        "container_id": "tradingview_chart",
+                        "width": "100%",
+                        "height": "100%",
+                        "symbol": "BINANCE:BTCUSDT",
+                        "interval": "30",
+                        "timezone": "Etc/UTC",
+                        "theme": "dark",
+                        "style": "1",
+                        "locale": "ru",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "hide_side_toolbar": true,
+                        "hide_top_toolbar": true,
+                        "allow_symbol_change": false,
+                        "backgroundColor": "transparent",
+                        "studies": ["RSI@tv-basicstudies"],
+                        "autosize": true
+                    });
+                }, 100); // Задержка 100 мс, чтобы не тормозить рендер страницы
 
                 // Слайдер отзывов (оставил без изменений)
                 let index = 0;
@@ -434,6 +439,7 @@
                 }
             });
         </script>
+
 
     </section>
 
