--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             color: #ffffff;
             padding-top: 80px;
             /* Отступ для контента после фиксированного хедера */
+
+            /* Скрываем сайт до загрузки графика или истечения таймера */
+            visibility: hidden;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
         }
 
         /* Анимация появления (fade-in), используется в других секциях */
@@ -28,6 +33,13 @@
         .fade-in.visible {
             opacity: 1;
             transform: translateY(0);
+        }
+
+        /* Скрытие хедера на мобильных устройствах */
+        @media (max-width: 1024px) {
+            header {
+                display: none;
+            }
         }
 
         /* Структура Hero-секции */
@@ -88,10 +100,6 @@
             font-weight: bold;
             transition: background-color 0.3s ease-in-out;
             /* Указываем конкретное свойство */
-        }
-
-        .hero-content a:hover {
-            background-color: #FFC107;
         }
 
         .hero-content a:hover {
@@ -379,8 +387,19 @@
         <script src="https://s3.tradingview.com/tv.js"></script> <!-- Подключение TradingView API -->
         <script>
             document.addEventListener("DOMContentLoaded", () => {
-                // Показываем сайт сразу, не ждем график
-                document.querySelector(".hero").style.visibility = "visible";
+                const body = document.body;
+
+                // Функция показа сайта после загрузки графика или таймера
+                function showSite() {
+                    body.style.visibility = "visible";
+                    body.style.opacity = "1";
+                }
+
+                // Проверяем, если сайт открыт с мобильного устройства — скрываем хедер
+                const isMobile = /Mobi|Android|iPhone|iPad/i.test(navigator.userAgent);
+                if (isMobile) {
+                    document.querySelector("header").style.display = "none";
+                }
 
                 // Анимация появления элементов при скролле
                 const fadeElements = document.querySelectorAll(".fade-in");
@@ -394,28 +413,39 @@
 
                 fadeElements.forEach(el => observer.observe(el));
 
-                // Загружаем график без блокировки страницы
-                setTimeout(() => {
-                    new TradingView.widget({
-                        "container_id": "tradingview_chart",
-                        "width": "100%",
-                        "height": "100%",
-                        "symbol": "BINANCE:BTCUSDT",
-                        "interval": "30",
-                        "timezone": "Etc/UTC",
-                        "theme": "dark",
-                        "style": "1",
-                        "locale": "ru",
-                        "toolbar_bg": "#f1f3f6",
-                        "enable_publishing": false,
-                        "hide_side_toolbar": true,
-                        "hide_top_toolbar": true,
-                        "allow_symbol_change": false,
-                        "backgroundColor": "transparent",
-                        "studies": ["RSI@tv-basicstudies"],
-                        "autosize": true
+                // Функция загрузки TradingView графика
+                function loadTradingViewChart() {
+                    return new Promise((resolve) => {
+                        new TradingView.widget({
+                            "container_id": "tradingview_chart",
+                            "width": "100%",
+                            "height": "100%",
+                            "symbol": "BINANCE:BTCUSDT",
+                            "interval": "30",
+                            "timezone": "Etc/UTC",
+                            "theme": "dark",
+                            "style": "1",
+                            "locale": "ru",
+                            "toolbar_bg": "#f1f3f6",
+                            "enable_publishing": false,
+                            "hide_side_toolbar": true,
+                            "hide_top_toolbar": true,
+                            "allow_symbol_change": false,
+                            "backgroundColor": "transparent",
+                            "studies": ["RSI@tv-basicstudies"],
+                            "autosize": true,
+                            "onready": resolve // График загружен → завершаем Promise
+                        });
                     });
-                }, 100); // Задержка 100 мс, чтобы не тормозить рендер страницы
+                }
+
+                // Функция таймера (2 секунды)
+                function timeout(ms) {
+                    return new Promise(resolve => setTimeout(resolve, ms));
+                }
+
+                // Ждём загрузку графика или 2 секунды (что быстрее)
+                Promise.race([loadTradingViewChart(), timeout(2000)]).then(showSite);
 
                 // Слайдер отзывов (оставил без изменений)
                 let index = 0;
